welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: '(' expected but identifier found.
def move(pas:Int,avant:Boolean) = { if avant=true 
                                       ^